fixes code overflow problem

--- a/src/Components/TipTap/TipTap.scss
+++ b/src/Components/TipTap/TipTap.scss
@@ -37,6 +37,7 @@
             padding: 0;
             background: none;
             font-size: 0.8rem;
+            overflow: auto;
         }
     }
 
